test/errmsg/incomplete-struct-variable.c.expect
---- stdout ----
---- stderr ----
errmsg/incomplete-struct-variable.c:4:10: error: attempt to create an object of incomplete class 'S'
---- exit status ----
Exit 2
